# orchard_navigation

./: CMakeLists.txt  README.md  ground_truth  ground_truth.py  ground_truth_map.pgm  package.xml  setup.cfg  setup.py
config/: mapper_params_online_async.yaml  nav2_params.yaml
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
launch/: astar.launch.py  launch_sim.launch.py  launch_urdf_into_gazebo.launch.py  rsp.launch.py
orch_sim/: navigation.py  row_following_node.py
row_following_pkg/: binary_occupancy_map.npy  converted_trees.json  detected_trees.yaml  map_reference.yaml  package.xml  row1.json  row10.json  row11.json  row2.json  row3.json  row4.json  row5.json  row6.json  row7.json  row8.json  row9.json  setup.cfg  setup.py  tree_db.json  tree_db_1.json  tree_db_2.json  tree_db_missing.json  tree_markings.yaml
row_following_pkg/row_following_pkg/scripts/: astar_planner.py  autonomous_navigation.py  box_plot.py  dbscan.py  dbscan_circles.py  explorer.py  fit_line_clusters.py  infl.py  mapping_accuracy.py  multiple_tree_monitoring.py  ninety_degree.py  obstacle_inflation.py  one_eighty.py  path_follow_multiple_tree.py  path_follow_single_tree_monitoring.py  resulat_valid.py  result.py  row_following.py  single _tree_monitoring.py  test_map.py  tree_id.py  tree_marking.py
row_following_pkg/scripts/: row11(copy).json  tree_db.json
rviz/: new.rviz  urdf_gazebo_config.rviz
scripts/: tree_row_navigator.py
urdf/: new.urdf  nw.urdf
worlds/: empty.world  orch.world  orchard_valid.world
(+2 files in other folders)
