<?xml version="1.0"?>
<package format="3">
  <name>row_following_pkg</name>
  <version>0.0.0</version>
  <description>A ROS 2 Python package for row following node</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sklearn</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>  <!-- Ensure the correct build system is specified -->
  </export>
</package>

